@@ -7,17 +7,12 @@ import java.util.List;
 public class Refactor {
 
   public static void main(String[] args) {
-    String[] name = { "Diogo", "Costa" };
-    ArrayList<String> test = new ArrayList<>();
-    test.add("Diogo");
-    test.add("Costa");
-    List<String> test2 = List.of("Diogo", "Costa");
-    List<String> test3 = Arrays.asList("Maria", "Costa");
+    String[] name1 = { "Diogo", "Costa" };
+    List<String> name2 = Arrays.asList("Maria", "Costa");
+    ArrayList<String> name3 = new ArrayList<>(List.of("John", "Smith"));
 
-    for (int i = 0; i < test3.size(); i++) {
-      test3.set(i, test3.get(i).toUpperCase());
+    for (String name : name1) {
+      System.out.println(name);
     }
-
-    System.out.println(test3);
   }
 }
